# indiepixel-example

./: .gitignore  README.md  mise.toml  pyproject.toml  requirements.txt
src/: clock.py
